findbugs: catch correct throwable
git-svn-id: https://svn.code.sf.net/p/genj/code/trunk@6111 fbd980a2-0dff-11df-b4b7-0b05b74d0985